Make flink card smoother and more clean

--- a/configuration.yml
+++ b/configuration.yml
@@ -27,22 +27,22 @@ cities:
 - Tijuana
 dynamicCities:
   current:
-  - Lisbon
-  - Sintra
-  - Vila Nova de Gaia
-  - Porto city
-  - Porto
-  - Cascais
-  - Loures
+  - Stockholm
+  - Gothenburg
+  - "Malm\xF6"
+  - Uppsala
+  - "V\xE4ster\xE5s"
+  - "\xD6rebro"
+  - "Link\xF6ping"
   enabled: true
   previousBatch:
-  - Lisbon
-  - Sintra
-  - Vila Nova de Gaia
-  - Porto city
-  - Porto
-  - Cascais
-  - Loures
+  - Stockholm
+  - Gothenburg
+  - "Malm\xF6"
+  - Uppsala
+  - "V\xE4ster\xE5s"
+  - "\xD6rebro"
+  - "Link\xF6ping"
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 7
