--- a/city-api/config/city-edits.yml
+++ b/city-api/config/city-edits.yml
@@ -43,3 +43,5 @@ countries:
     description: Batumi, Georgia's largest city, is a vibrant coastal metropolis that combines modernity with natural beauty. It is known for its beautiful beaches, lush parks, and historic landmarks.
   Vietnam,Ho Chi Minh City:
     description: Ho Chi Minh City, formerly known as Saigon, is the largest city in Vietnam and a major economic and cultural center. It is known for its vibrant street life, delicious cuisine, and historical landmarks.
+  Iceland, Reykjavik:
+    description: Reykjavik, the capital city of Iceland, is a vibrant and modern city that combines natural beauty with urban development. It is known for its unique architecture, vibrant nightlife, and rich cultural scene.
