--- a/city-api/config/city-edits.yml
+++ b/city-api/config/city-edits.yml
@@ -45,3 +45,6 @@ countries:
     description: Ho Chi Minh City, formerly known as Saigon, is the largest city in Vietnam and a major economic and cultural center. It is known for its vibrant street life, delicious cuisine, and historical landmarks.
   Iceland, Reykjavik:
     description: Reykjavik, the capital city of Iceland, is a vibrant and modern city that combines natural beauty with urban development. It is known for its unique architecture, vibrant nightlife, and rich cultural scene.
+  India, Delhi:
+    description: Delhi, the capital city of India, is a bustling metropolis that combines modernity with ancient traditions. It is known for its rich cultural heritage, vibrant street life, and delicious cuisine.
+
