--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,9 @@ services:
     networks:
       - app_network
     restart: unless-stopped
-    mem_limit: 256m
+    mem_limit: 1g
+    cpu_shares: 1024
+    cpu_quota: 100000
 
   flink-processor:
     build:
