Fix 'selected-country' endpoint (while breaking real-time line charts for dynamic cities)

--- a/city-api/Dockerfile
+++ b/city-api/Dockerfile
@@ -32,7 +32,8 @@ RUN pip install --no-cache-dir \
     uvicorn \
     statsmodels \
     scipy \
-    numpy
+    numpy \
+    aiohttp
 
 # Create necessary directories
 RUN mkdir -p \
