Make GlobalView slightly wider to cover the thin gradient background on the right edge

--- a/configuration.yml
+++ b/configuration.yml
@@ -85,22 +85,22 @@ cities:
 - Chengdu
 dynamicCities:
   current:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
-  - "\xD6rebro"
-  - "Link\xF6ping"
+  - New York City
+  - Los Angeles
+  - Chicago
+  - Brooklyn
+  - Queens
+  - Houston
+  - Kansas City metropolitan area
   enabled: true
   previousBatch:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
-  - "\xD6rebro"
-  - "Link\xF6ping"
+  - New York City
+  - Los Angeles
+  - Chicago
+  - Brooklyn
+  - Queens
+  - Houston
+  - Kansas City metropolitan area
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 7
