Add scrolling feature for kafka producer terminal

--- a/configuration.yml
+++ b/configuration.yml
@@ -85,22 +85,22 @@ cities:
 - Chengdu
 dynamicCities:
   current:
-  - New York City
-  - Los Angeles
-  - Chicago
-  - Brooklyn
-  - Queens
-  - Houston
-  - Kansas City metropolitan area
+  - Stockholm
+  - Gothenburg
+  - "Malm\xF6"
+  - Uppsala
+  - "V\xE4ster\xE5s"
+  - "\xD6rebro"
+  - "Link\xF6ping"
   enabled: true
   previousBatch:
-  - New York City
-  - Los Angeles
-  - Chicago
-  - Brooklyn
-  - Queens
-  - Houston
-  - Kansas City metropolitan area
+  - Stockholm
+  - Gothenburg
+  - "Malm\xF6"
+  - Uppsala
+  - "V\xE4ster\xE5s"
+  - "\xD6rebro"
+  - "Link\xF6ping"
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 7
