Fix feature where developer specifies N cities to fetch from selected country

--- a/city-api/config/city-edits.yml
+++ b/city-api/config/city-edits.yml
@@ -57,3 +57,5 @@ countries:
     description: Johannesburg, the largest city in South Africa, is a vibrant and modern city that combines natural beauty with urban development. It is known for its unique architecture, vibrant nightlife, and rich cultural scene.
   Iceland, Reykjavík:
     description: Reykjavík, the capital city of Iceland, is a vibrant and modern city that combines natural beauty with urban development. It is known for its unique architecture, vibrant nightlife, and rich cultural scene.
+  New Zealand, Auckland:
+    description: Auckland, the largest city in New Zealand, is a vibrant and modern city that combines natural beauty with urban development. It is known for its unique architecture, vibrant nightlife, and rich cultural scene.
