--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -203,9 +203,9 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
-      - MAX_RECORDS=10000000
+      - MAX_RECORDS=2000
       - CHECK_INTERVAL=60
-      - BATCH_DELETE_SIZE=100000
+      - BATCH_DELETE_SIZE=10000
     restart: unless-stopped
     mem_limit: 2560m
 
