Fix dynamic city display of 3D globe

--- a/configuration.yml
+++ b/configuration.yml
@@ -85,18 +85,18 @@ cities:
 - Chengdu
 dynamicCities:
   current:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
+  - Oslo
+  - Bergen
+  - Trondheim
+  - Stavanger
+  - Stavanger town
   enabled: true
   previousBatch:
-  - Stockholm
-  - Gothenburg
-  - "Malm\xF6"
-  - Uppsala
-  - "V\xE4ster\xE5s"
+  - Oslo
+  - Bergen
+  - Trondheim
+  - Stavanger
+  - Stavanger town
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 5
