Make UI for cities grid and world map more elegant

--- a/city-api/config/city-edits.yml
+++ b/city-api/config/city-edits.yml
@@ -59,3 +59,5 @@ countries:
     description: Reykjavík, the capital city of Iceland, is a vibrant and modern city that combines natural beauty with urban development. It is known for its unique architecture, vibrant nightlife, and rich cultural scene.
   New Zealand, Auckland:
     description: Auckland, the largest city in New Zealand, is a vibrant and modern city that combines natural beauty with urban development. It is known for its unique architecture, vibrant nightlife, and rich cultural scene.
+  Colombia, Bogotá:
+    description: Bogotá, the capital city of Colombia, is a vibrant and modern city that combines natural beauty with urban development. It is known for its unique architecture, vibrant nightlife, and rich cultural scene.
