--- a/configuration.yml
+++ b/configuration.yml
@@ -85,18 +85,18 @@ cities:
 - Chengdu
 dynamicCities:
   current:
-  - Greater Rio de Janeiro
-  - "S\xE3o Paulo"
-  - Rio de Janeiro
-  - "Bras\xEDlia"
-  - Fortaleza
+  - Madrid
+  - Madrid city
+  - Barcelona
+  - Barcelona City
+  - Valencia
   enabled: true
   previousBatch:
-  - Greater Rio de Janeiro
-  - "S\xE3o Paulo"
-  - Rio de Janeiro
-  - "Bras\xEDlia"
-  - Fortaleza
+  - Madrid
+  - Madrid city
+  - Barcelona
+  - Barcelona City
+  - Valencia
 services:
   cityApi:
     numberOfCitiesForSelectedCountry: 5
