--- a/k8s/flink-processor-deployment.yaml
+++ b/k8s/flink-processor-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: flink-processor
-  namespace: city-streaming
+  namespace: global-city-streaming
 spec:
   ports:
   - port: 8001
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flink-processor
-  namespace: city-streaming
+  namespace: global-city-streaming
 spec:
   replicas: 1
   selector:
