--- a/k8s/kafka-zk-statefulset.yaml
+++ b/k8s/kafka-zk-statefulset.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zookeeper
-  namespace: city-streaming
+  namespace: global-city-streaming
 spec:
   ports:
   - port: 2181
@@ -19,7 +19,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: zookeeper
-  namespace: city-streaming
+  namespace: global-city-streaming
 spec:
   serviceName: zookeeper
   replicas: 1
@@ -84,7 +84,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kafka
-  namespace: city-streaming
+  namespace: global-city-streaming
 spec:
   ports:
   - port: 9092
@@ -97,7 +97,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: kafka
-  namespace: city-streaming
+  namespace: global-city-streaming
 spec:
   serviceName: kafka
   replicas: 1
