--- a/k8s/namespace.yaml
+++ b/k8s/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: city-streaming
+  name: global-city-streaming
   labels:
-    name: city-streaming 
+    name: global-city-streaming 
