--- a/k8s/postgres-statefulset.yaml
+++ b/k8s/postgres-statefulset.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: city-streaming
+  namespace: global-city-streaming
 spec:
   ports:
   - port: 5432
@@ -15,7 +15,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: postgres
-  namespace: city-streaming
+  namespace: global-city-streaming
 spec:
   serviceName: postgres
   replicas: 1
@@ -77,7 +77,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-secret
-  namespace: city-streaming
+  namespace: global-city-streaming
 type: Opaque
 data:
   username: cG9zdGdyZXM=  # base64 encoded 'postgres'
